// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select component tests should have correct disabled true 1`] = `
<Select
  allowClear={true}
  disabled={true}
  options={Array []}
  placeholder=""
  showSearch={false}
  size="large"
>
  <Memo(l) />
  <Styled(Component)
    allowClear={true}
    disabled={true}
    filterOption={false}
    optionFilterProp="label"
    placeholder=""
    showArrow={true}
    showSearch={false}
    size="large"
  >
    <ForwardRef(InternalSelect)
      allowClear={true}
      className="sc-bczRLJ fzjfla"
      disabled={true}
      filterOption={false}
      optionFilterProp="label"
      placeholder=""
      showArrow={true}
      showSearch={false}
      size="large"
    >
      <Select
        allowClear={true}
        className="ant-select-lg sc-bczRLJ fzjfla"
        clearIcon={<ForwardRef(CloseCircleFilled) />}
        disabled={true}
        dropdownClassName=""
        filterOption={false}
        inputIcon={[Function]}
        listHeight={256}
        listItemHeight={24}
        menuItemSelectedIcon={null}
        notFoundContent={
          <Context.Consumer>
            [Function]
          </Context.Consumer>
        }
        optionFilterProp="label"
        placeholder=""
        placement="bottomLeft"
        prefixCls="ant-select"
        removeIcon={<ForwardRef(CloseOutlined) />}
        showArrow={true}
        showSearch={false}
        transitionName="ant-slide-up"
      >
        <BaseSelect
          OptionList={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "render": [Function],
            }
          }
          activeDescendantId="rc_select_TEST_OR_SSR_list_0"
          activeValue={null}
          allowClear={true}
          className="ant-select-lg sc-bczRLJ fzjfla"
          clearIcon={<ForwardRef(CloseCircleFilled) />}
          disabled={true}
          displayValues={Array []}
          dropdownClassName=""
          dropdownMatchSelectWidth={true}
          emptyOptions={true}
          id="rc_select_TEST_OR_SSR"
          inputIcon={[Function]}
          notFoundContent={
            <Context.Consumer>
              [Function]
            </Context.Consumer>
          }
          omitDomProps={
            Array [
              "inputValue",
            ]
          }
          onDisplayValuesChange={[Function]}
          onSearch={[Function]}
          onSearchSplit={[Function]}
          placeholder=""
          placement="bottomLeft"
          prefixCls="ant-select"
          removeIcon={<ForwardRef(CloseOutlined) />}
          searchValue=""
          showArrow={true}
          showSearch={false}
          transitionName="ant-slide-up"
        >
          <div
            className="ant-select ant-select-lg sc-bczRLJ fzjfla ant-select-single ant-select-allow-clear ant-select-show-arrow ant-select-disabled"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
          >
            <SelectTrigger
              containerWidth={null}
              disabled={true}
              dropdownClassName=""
              dropdownMatchSelectWidth={true}
              empty={true}
              getTriggerDOMNode={[Function]}
              onPopupMouseEnter={[Function]}
              placement="bottomLeft"
              popupElement={<OptionList />}
              prefixCls="ant-select"
              transitionName="ant-slide-up"
              visible={false}
            >
              <Trigger
                action={Array []}
                afterPopupVisibleChange={[Function]}
                autoDestroy={false}
                blurDelay={0.15}
                builtinPlacements={
                  Object {
                    "bottomLeft": Object {
                      "offset": Array [
                        0,
                        4,
                      ],
                      "overflow": Object {
                        "adjustX": 0,
                        "adjustY": 1,
                      },
                      "points": Array [
                        "tl",
                        "bl",
                      ],
                    },
                    "bottomRight": Object {
                      "offset": Array [
                        0,
                        4,
                      ],
                      "overflow": Object {
                        "adjustX": 0,
                        "adjustY": 1,
                      },
                      "points": Array [
                        "tr",
                        "br",
                      ],
                    },
                    "topLeft": Object {
                      "offset": Array [
                        0,
                        -4,
                      ],
                      "overflow": Object {
                        "adjustX": 0,
                        "adjustY": 1,
                      },
                      "points": Array [
                        "bl",
                        "tl",
                      ],
                    },
                    "topRight": Object {
                      "offset": Array [
                        0,
                        -4,
                      ],
                      "overflow": Object {
                        "adjustX": 0,
                        "adjustY": 1,
                      },
                      "points": Array [
                        "br",
                        "tr",
                      ],
                    },
                  }
                }
                defaultPopupVisible={false}
                destroyPopupOnHide={false}
                focusDelay={0}
                getDocument={[Function]}
                getPopupClassNameFromAlign={[Function]}
                getTriggerDOMNode={[Function]}
                hideAction={Array []}
                mask={false}
                maskClosable={true}
                mouseEnterDelay={0}
                mouseLeaveDelay={0.1}
                onPopupAlign={[Function]}
                onPopupVisibleChange={[Function]}
                popup={
                  <div
                    onMouseEnter={[Function]}
                  >
                    <OptionList />
                  </div>
                }
                popupAlign={Object {}}
                popupClassName="ant-select-dropdown-empty"
                popupPlacement="bottomLeft"
                popupStyle={
                  Object {
                    "minWidth": null,
                    "width": null,
                  }
                }
                popupTransitionName="ant-slide-up"
                popupVisible={false}
                prefixCls="ant-select-dropdown"
                showAction={Array []}
              >
                <Selector
                  OptionList={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "render": [Function],
                    }
                  }
                  activeDescendantId="rc_select_TEST_OR_SSR_list_0"
                  activeValue={null}
                  allowClear={true}
                  className="ant-select-lg sc-bczRLJ fzjfla"
                  clearIcon={<ForwardRef(CloseCircleFilled) />}
                  disabled={true}
                  displayValues={Array []}
                  domRef={
                    Object {
                      "current": <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                            aria-autocomplete="list"
                            aria-controls="rc_select_TEST_OR_SSR_list"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-owns="rc_select_TEST_OR_SSR_list"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            disabled=""
                            id="rc_select_TEST_OR_SSR"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            type="search"
                            unselectable="on"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-placeholder"
                        />
                      </div>,
                    }
                  }
                  dropdownClassName=""
                  dropdownMatchSelectWidth={true}
                  emptyOptions={true}
                  id="rc_select_TEST_OR_SSR"
                  inputElement={null}
                  inputIcon={[Function]}
                  key="trigger"
                  notFoundContent={
                    <Context.Consumer>
                      [Function]
                    </Context.Consumer>
                  }
                  omitDomProps={
                    Array [
                      "inputValue",
                    ]
                  }
                  onDisplayValuesChange={[Function]}
                  onRemove={[Function]}
                  onSearch={[Function]}
                  onSearchSplit={[Function]}
                  onSearchSubmit={[Function]}
                  onToggleOpen={[Function]}
                  open={false}
                  placeholder=""
                  placement="bottomLeft"
                  prefixCls="ant-select"
                  removeIcon={<ForwardRef(CloseOutlined) />}
                  searchValue=""
                  showArrow={true}
                  showSearch={false}
                  tokenWithEnter={false}
                  transitionName="ant-slide-up"
                  values={Array []}
                >
                  <div
                    className="ant-select-selector"
                    onClick={[Function]}
                    onMouseDown={[Function]}
                  >
                    <SingleSelector
                      OptionList={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "render": [Function],
                        }
                      }
                      activeDescendantId="rc_select_TEST_OR_SSR_list_0"
                      activeValue={null}
                      allowClear={true}
                      className="ant-select-lg sc-bczRLJ fzjfla"
                      clearIcon={<ForwardRef(CloseCircleFilled) />}
                      disabled={true}
                      displayValues={Array []}
                      domRef={
                        Object {
                          "current": <div
                            class="ant-select-selector"
                          >
                            <span
                              class="ant-select-selection-search"
                            >
                              <input
                                aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                                aria-autocomplete="list"
                                aria-controls="rc_select_TEST_OR_SSR_list"
                                aria-expanded="false"
                                aria-haspopup="listbox"
                                aria-owns="rc_select_TEST_OR_SSR_list"
                                autocomplete="off"
                                class="ant-select-selection-search-input"
                                disabled=""
                                id="rc_select_TEST_OR_SSR"
                                readonly=""
                                role="combobox"
                                style="opacity: 0;"
                                type="search"
                                unselectable="on"
                                value=""
                              />
                            </span>
                            <span
                              class="ant-select-selection-placeholder"
                            />
                          </div>,
                        }
                      }
                      dropdownClassName=""
                      dropdownMatchSelectWidth={true}
                      emptyOptions={true}
                      id="rc_select_TEST_OR_SSR"
                      inputElement={null}
                      inputIcon={[Function]}
                      inputRef={
                        Object {
                          "current": <input
                            aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                            aria-autocomplete="list"
                            aria-controls="rc_select_TEST_OR_SSR_list"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-owns="rc_select_TEST_OR_SSR_list"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            disabled=""
                            id="rc_select_TEST_OR_SSR"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            type="search"
                            unselectable="on"
                            value=""
                          />,
                        }
                      }
                      notFoundContent={
                        <Context.Consumer>
                          [Function]
                        </Context.Consumer>
                      }
                      omitDomProps={
                        Array [
                          "inputValue",
                        ]
                      }
                      onDisplayValuesChange={[Function]}
                      onInputChange={[Function]}
                      onInputCompositionEnd={[Function]}
                      onInputCompositionStart={[Function]}
                      onInputKeyDown={[Function]}
                      onInputMouseDown={[Function]}
                      onInputPaste={[Function]}
                      onRemove={[Function]}
                      onSearch={[Function]}
                      onSearchSplit={[Function]}
                      onSearchSubmit={[Function]}
                      onToggleOpen={[Function]}
                      open={false}
                      placeholder=""
                      placement="bottomLeft"
                      prefixCls="ant-select"
                      removeIcon={<ForwardRef(CloseOutlined) />}
                      searchValue=""
                      showArrow={true}
                      showSearch={false}
                      tokenWithEnter={false}
                      transitionName="ant-slide-up"
                      values={Array []}
                    >
                      <span
                        className="ant-select-selection-search"
                      >
                        <Input
                          activeDescendantId="rc_select_TEST_OR_SSR_list_0"
                          attrs={Object {}}
                          disabled={true}
                          editable={false}
                          id="rc_select_TEST_OR_SSR"
                          inputElement={null}
                          onChange={[Function]}
                          onCompositionEnd={[Function]}
                          onCompositionStart={[Function]}
                          onKeyDown={[Function]}
                          onMouseDown={[Function]}
                          onPaste={[Function]}
                          open={false}
                          prefixCls="ant-select"
                          value=""
                        >
                          <input
                            aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                            aria-autocomplete="list"
                            aria-controls="rc_select_TEST_OR_SSR_list"
                            aria-expanded={false}
                            aria-haspopup="listbox"
                            aria-owns="rc_select_TEST_OR_SSR_list"
                            autoComplete="off"
                            className="ant-select-selection-search-input"
                            disabled={true}
                            id="rc_select_TEST_OR_SSR"
                            onChange={[Function]}
                            onCompositionEnd={[Function]}
                            onCompositionStart={[Function]}
                            onKeyDown={[Function]}
                            onMouseDown={[Function]}
                            onPaste={[Function]}
                            readOnly={true}
                            role="combobox"
                            style={
                              Object {
                                "opacity": 0,
                              }
                            }
                            type="search"
                            unselectable="on"
                            value=""
                          />
                        </Input>
                      </span>
                      <span
                        className="ant-select-selection-placeholder"
                      />
                    </SingleSelector>
                  </div>
                </Selector>
              </Trigger>
            </SelectTrigger>
            <TransBtn
              className="ant-select-arrow"
              customizeIcon={[Function]}
              customizeIconProps={
                Object {
                  "focused": false,
                  "loading": undefined,
                  "open": false,
                  "searchValue": "",
                  "showSearch": false,
                }
              }
            >
              <span
                aria-hidden={true}
                className="ant-select-arrow"
                onMouseDown={[Function]}
                style={
                  Object {
                    "WebkitUserSelect": "none",
                    "userSelect": "none",
                  }
                }
                unselectable="on"
              >
                <ForwardRef(DownOutlined)
                  className="ant-select-suffix"
                >
                  <AntdIcon
                    className="ant-select-suffix"
                    icon={
                      Object {
                        "icon": Object {
                          "attrs": Object {
                            "focusable": "false",
                            "viewBox": "64 64 896 896",
                          },
                          "children": Array [
                            Object {
                              "attrs": Object {
                                "d": "M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z",
                              },
                              "tag": "path",
                            },
                          ],
                          "tag": "svg",
                        },
                        "name": "down",
                        "theme": "outlined",
                      }
                    }
                  >
                    <span
                      aria-label="down"
                      className="anticon anticon-down ant-select-suffix"
                      role="img"
                    >
                      <IconReact
                        icon={
                          Object {
                            "icon": Object {
                              "attrs": Object {
                                "focusable": "false",
                                "viewBox": "64 64 896 896",
                              },
                              "children": Array [
                                Object {
                                  "attrs": Object {
                                    "d": "M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z",
                                  },
                                  "tag": "path",
                                },
                              ],
                              "tag": "svg",
                            },
                            "name": "down",
                            "theme": "outlined",
                          }
                        }
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="down"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          key="svg-down"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            key="svg-down-svg-0"
                          />
                        </svg>
                      </IconReact>
                    </span>
                  </AntdIcon>
                </ForwardRef(DownOutlined)>
              </span>
            </TransBtn>
          </div>
        </BaseSelect>
      </Select>
    </ForwardRef(InternalSelect)>
  </Styled(Component)>
</Select>
`;

exports[`Select component tests should have correct size middle 1`] = `
<Select
  allowClear={true}
  disabled={false}
  options={Array []}
  placeholder=""
  showSearch={false}
  size="middle"
>
  <Memo(l) />
  <Styled(Component)
    allowClear={true}
    disabled={false}
    filterOption={false}
    optionFilterProp="label"
    placeholder=""
    showArrow={true}
    showSearch={false}
    size="middle"
  >
    <ForwardRef(InternalSelect)
      allowClear={true}
      className="sc-bczRLJ buikYC"
      disabled={false}
      filterOption={false}
      optionFilterProp="label"
      placeholder=""
      showArrow={true}
      showSearch={false}
      size="middle"
    >
      <Select
        allowClear={true}
        className="sc-bczRLJ buikYC"
        clearIcon={<ForwardRef(CloseCircleFilled) />}
        disabled={false}
        dropdownClassName=""
        filterOption={false}
        inputIcon={[Function]}
        listHeight={256}
        listItemHeight={24}
        menuItemSelectedIcon={null}
        notFoundContent={
          <Context.Consumer>
            [Function]
          </Context.Consumer>
        }
        optionFilterProp="label"
        placeholder=""
        placement="bottomLeft"
        prefixCls="ant-select"
        removeIcon={<ForwardRef(CloseOutlined) />}
        showArrow={true}
        showSearch={false}
        transitionName="ant-slide-up"
      >
        <BaseSelect
          OptionList={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "render": [Function],
            }
          }
          activeDescendantId="rc_select_TEST_OR_SSR_list_0"
          activeValue={null}
          allowClear={true}
          className="sc-bczRLJ buikYC"
          clearIcon={<ForwardRef(CloseCircleFilled) />}
          disabled={false}
          displayValues={Array []}
          dropdownClassName=""
          dropdownMatchSelectWidth={true}
          emptyOptions={true}
          id="rc_select_TEST_OR_SSR"
          inputIcon={[Function]}
          notFoundContent={
            <Context.Consumer>
              [Function]
            </Context.Consumer>
          }
          omitDomProps={
            Array [
              "inputValue",
            ]
          }
          onDisplayValuesChange={[Function]}
          onSearch={[Function]}
          onSearchSplit={[Function]}
          placeholder=""
          placement="bottomLeft"
          prefixCls="ant-select"
          removeIcon={<ForwardRef(CloseOutlined) />}
          searchValue=""
          showArrow={true}
          showSearch={false}
          transitionName="ant-slide-up"
        >
          <div
            className="ant-select sc-bczRLJ buikYC ant-select-single ant-select-allow-clear ant-select-show-arrow"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
          >
            <SelectTrigger
              containerWidth={null}
              disabled={false}
              dropdownClassName=""
              dropdownMatchSelectWidth={true}
              empty={true}
              getTriggerDOMNode={[Function]}
              onPopupMouseEnter={[Function]}
              placement="bottomLeft"
              popupElement={<OptionList />}
              prefixCls="ant-select"
              transitionName="ant-slide-up"
            >
              <Trigger
                action={Array []}
                afterPopupVisibleChange={[Function]}
                autoDestroy={false}
                blurDelay={0.15}
                builtinPlacements={
                  Object {
                    "bottomLeft": Object {
                      "offset": Array [
                        0,
                        4,
                      ],
                      "overflow": Object {
                        "adjustX": 0,
                        "adjustY": 1,
                      },
                      "points": Array [
                        "tl",
                        "bl",
                      ],
                    },
                    "bottomRight": Object {
                      "offset": Array [
                        0,
                        4,
                      ],
                      "overflow": Object {
                        "adjustX": 0,
                        "adjustY": 1,
                      },
                      "points": Array [
                        "tr",
                        "br",
                      ],
                    },
                    "topLeft": Object {
                      "offset": Array [
                        0,
                        -4,
                      ],
                      "overflow": Object {
                        "adjustX": 0,
                        "adjustY": 1,
                      },
                      "points": Array [
                        "bl",
                        "tl",
                      ],
                    },
                    "topRight": Object {
                      "offset": Array [
                        0,
                        -4,
                      ],
                      "overflow": Object {
                        "adjustX": 0,
                        "adjustY": 1,
                      },
                      "points": Array [
                        "br",
                        "tr",
                      ],
                    },
                  }
                }
                defaultPopupVisible={false}
                destroyPopupOnHide={false}
                focusDelay={0}
                getDocument={[Function]}
                getPopupClassNameFromAlign={[Function]}
                getTriggerDOMNode={[Function]}
                hideAction={Array []}
                mask={false}
                maskClosable={true}
                mouseEnterDelay={0}
                mouseLeaveDelay={0.1}
                onPopupAlign={[Function]}
                onPopupVisibleChange={[Function]}
                popup={
                  <div
                    onMouseEnter={[Function]}
                  >
                    <OptionList />
                  </div>
                }
                popupAlign={Object {}}
                popupClassName="ant-select-dropdown-empty"
                popupPlacement="bottomLeft"
                popupStyle={
                  Object {
                    "minWidth": null,
                    "width": null,
                  }
                }
                popupTransitionName="ant-slide-up"
                prefixCls="ant-select-dropdown"
                showAction={Array []}
              >
                <Selector
                  OptionList={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "render": [Function],
                    }
                  }
                  activeDescendantId="rc_select_TEST_OR_SSR_list_0"
                  activeValue={null}
                  allowClear={true}
                  className="sc-bczRLJ buikYC"
                  clearIcon={<ForwardRef(CloseCircleFilled) />}
                  disabled={false}
                  displayValues={Array []}
                  domRef={
                    Object {
                      "current": <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                            aria-autocomplete="list"
                            aria-controls="rc_select_TEST_OR_SSR_list"
                            aria-haspopup="listbox"
                            aria-owns="rc_select_TEST_OR_SSR_list"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="rc_select_TEST_OR_SSR"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            type="search"
                            unselectable="on"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-placeholder"
                        />
                      </div>,
                    }
                  }
                  dropdownClassName=""
                  dropdownMatchSelectWidth={true}
                  emptyOptions={true}
                  id="rc_select_TEST_OR_SSR"
                  inputElement={null}
                  inputIcon={[Function]}
                  key="trigger"
                  notFoundContent={
                    <Context.Consumer>
                      [Function]
                    </Context.Consumer>
                  }
                  omitDomProps={
                    Array [
                      "inputValue",
                    ]
                  }
                  onDisplayValuesChange={[Function]}
                  onRemove={[Function]}
                  onSearch={[Function]}
                  onSearchSplit={[Function]}
                  onSearchSubmit={[Function]}
                  onToggleOpen={[Function]}
                  placeholder=""
                  placement="bottomLeft"
                  prefixCls="ant-select"
                  removeIcon={<ForwardRef(CloseOutlined) />}
                  searchValue=""
                  showArrow={true}
                  showSearch={false}
                  tokenWithEnter={false}
                  transitionName="ant-slide-up"
                  values={Array []}
                >
                  <div
                    className="ant-select-selector"
                    onClick={[Function]}
                    onMouseDown={[Function]}
                  >
                    <SingleSelector
                      OptionList={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "render": [Function],
                        }
                      }
                      activeDescendantId="rc_select_TEST_OR_SSR_list_0"
                      activeValue={null}
                      allowClear={true}
                      className="sc-bczRLJ buikYC"
                      clearIcon={<ForwardRef(CloseCircleFilled) />}
                      disabled={false}
                      displayValues={Array []}
                      domRef={
                        Object {
                          "current": <div
                            class="ant-select-selector"
                          >
                            <span
                              class="ant-select-selection-search"
                            >
                              <input
                                aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                                aria-autocomplete="list"
                                aria-controls="rc_select_TEST_OR_SSR_list"
                                aria-haspopup="listbox"
                                aria-owns="rc_select_TEST_OR_SSR_list"
                                autocomplete="off"
                                class="ant-select-selection-search-input"
                                id="rc_select_TEST_OR_SSR"
                                readonly=""
                                role="combobox"
                                style="opacity: 0;"
                                type="search"
                                unselectable="on"
                                value=""
                              />
                            </span>
                            <span
                              class="ant-select-selection-placeholder"
                            />
                          </div>,
                        }
                      }
                      dropdownClassName=""
                      dropdownMatchSelectWidth={true}
                      emptyOptions={true}
                      id="rc_select_TEST_OR_SSR"
                      inputElement={null}
                      inputIcon={[Function]}
                      inputRef={
                        Object {
                          "current": <input
                            aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                            aria-autocomplete="list"
                            aria-controls="rc_select_TEST_OR_SSR_list"
                            aria-haspopup="listbox"
                            aria-owns="rc_select_TEST_OR_SSR_list"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="rc_select_TEST_OR_SSR"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            type="search"
                            unselectable="on"
                            value=""
                          />,
                        }
                      }
                      notFoundContent={
                        <Context.Consumer>
                          [Function]
                        </Context.Consumer>
                      }
                      omitDomProps={
                        Array [
                          "inputValue",
                        ]
                      }
                      onDisplayValuesChange={[Function]}
                      onInputChange={[Function]}
                      onInputCompositionEnd={[Function]}
                      onInputCompositionStart={[Function]}
                      onInputKeyDown={[Function]}
                      onInputMouseDown={[Function]}
                      onInputPaste={[Function]}
                      onRemove={[Function]}
                      onSearch={[Function]}
                      onSearchSplit={[Function]}
                      onSearchSubmit={[Function]}
                      onToggleOpen={[Function]}
                      placeholder=""
                      placement="bottomLeft"
                      prefixCls="ant-select"
                      removeIcon={<ForwardRef(CloseOutlined) />}
                      searchValue=""
                      showArrow={true}
                      showSearch={false}
                      tokenWithEnter={false}
                      transitionName="ant-slide-up"
                      values={Array []}
                    >
                      <span
                        className="ant-select-selection-search"
                      >
                        <Input
                          activeDescendantId="rc_select_TEST_OR_SSR_list_0"
                          attrs={Object {}}
                          disabled={false}
                          editable={false}
                          id="rc_select_TEST_OR_SSR"
                          inputElement={null}
                          onChange={[Function]}
                          onCompositionEnd={[Function]}
                          onCompositionStart={[Function]}
                          onKeyDown={[Function]}
                          onMouseDown={[Function]}
                          onPaste={[Function]}
                          prefixCls="ant-select"
                          value=""
                        >
                          <input
                            aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                            aria-autocomplete="list"
                            aria-controls="rc_select_TEST_OR_SSR_list"
                            aria-haspopup="listbox"
                            aria-owns="rc_select_TEST_OR_SSR_list"
                            autoComplete="off"
                            className="ant-select-selection-search-input"
                            disabled={false}
                            id="rc_select_TEST_OR_SSR"
                            onChange={[Function]}
                            onCompositionEnd={[Function]}
                            onCompositionStart={[Function]}
                            onKeyDown={[Function]}
                            onMouseDown={[Function]}
                            onPaste={[Function]}
                            readOnly={true}
                            role="combobox"
                            style={
                              Object {
                                "opacity": 0,
                              }
                            }
                            type="search"
                            unselectable="on"
                            value=""
                          />
                        </Input>
                      </span>
                      <span
                        className="ant-select-selection-placeholder"
                      />
                    </SingleSelector>
                  </div>
                </Selector>
              </Trigger>
            </SelectTrigger>
            <TransBtn
              className="ant-select-arrow"
              customizeIcon={[Function]}
              customizeIconProps={
                Object {
                  "focused": false,
                  "loading": undefined,
                  "open": undefined,
                  "searchValue": "",
                  "showSearch": false,
                }
              }
            >
              <span
                aria-hidden={true}
                className="ant-select-arrow"
                onMouseDown={[Function]}
                style={
                  Object {
                    "WebkitUserSelect": "none",
                    "userSelect": "none",
                  }
                }
                unselectable="on"
              >
                <ForwardRef(DownOutlined)
                  className="ant-select-suffix"
                >
                  <AntdIcon
                    className="ant-select-suffix"
                    icon={
                      Object {
                        "icon": Object {
                          "attrs": Object {
                            "focusable": "false",
                            "viewBox": "64 64 896 896",
                          },
                          "children": Array [
                            Object {
                              "attrs": Object {
                                "d": "M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z",
                              },
                              "tag": "path",
                            },
                          ],
                          "tag": "svg",
                        },
                        "name": "down",
                        "theme": "outlined",
                      }
                    }
                  >
                    <span
                      aria-label="down"
                      className="anticon anticon-down ant-select-suffix"
                      role="img"
                    >
                      <IconReact
                        icon={
                          Object {
                            "icon": Object {
                              "attrs": Object {
                                "focusable": "false",
                                "viewBox": "64 64 896 896",
                              },
                              "children": Array [
                                Object {
                                  "attrs": Object {
                                    "d": "M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z",
                                  },
                                  "tag": "path",
                                },
                              ],
                              "tag": "svg",
                            },
                            "name": "down",
                            "theme": "outlined",
                          }
                        }
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="down"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          key="svg-down"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            key="svg-down-svg-0"
                          />
                        </svg>
                      </IconReact>
                    </span>
                  </AntdIcon>
                </ForwardRef(DownOutlined)>
              </span>
            </TransBtn>
          </div>
        </BaseSelect>
      </Select>
    </ForwardRef(InternalSelect)>
  </Styled(Component)>
</Select>
`;

exports[`Select component tests should render select correctly with default props 1`] = `
<Fragment>
  <Memo(l) />
  <Styled(Component)
    allowClear={true}
    disabled={false}
    filterOption={false}
    optionFilterProp="label"
    placeholder=""
    showArrow={true}
    showSearch={false}
    size="large"
  >
    <Option
      key="1"
      label="1"
    >
      1
    </Option>
    <Option
      key="2"
      label="2"
    >
      2
    </Option>
  </Styled(Component)>
</Fragment>
`;

exports[`Select component tests should render select correctly with given props 1`] = `
<Fragment>
  <Memo(l) />
  <Styled(Component)
    allowClear={false}
    disabled={true}
    filterOption={true}
    optionFilterProp="label"
    placeholder="SOME_PLACEHOLDER"
    showArrow={true}
    showSearch={true}
    size="middle"
  >
    <Option
      key="1"
      label="1"
    >
      1
    </Option>
    <Option
      key="2"
      label="2"
    >
      2
    </Option>
  </Styled(Component)>
</Fragment>
`;
